--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "license": "MIT",
   "dependencies": {
     "concurrently": "^5.3.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7",
     "sequelize": "^6.4.0",
     "sequelize-cli": "^6.2.0"
   },
